deploy/src/objects/IPM_GDSection6_3__c.object
<CustomObject>
    <fields>
        <fullName>Avg_Retail_Price__c</fullName>
        <label>Avg Retail Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GM__c</fullName>
        <label>GM%</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Gross_A_P__c</fullName>
        <label>Gross A&amp;P</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Gross_PBI__c</fullName>
        <label>Gross PBI</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Gross_Turnover__c</fullName>
        <label>Gross Turnover</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IPM_GDSection6_5__c</fullName>
        <label>IPM GDSection6.5</label>
        <referenceTo>IPM_GDSection6_5__c</referenceTo>
        <relationshipLabel>IPM GDSection6.3</relationshipLabel>
        <relationshipName>IPM_GDSection6_3</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Innov_Value_Share__c</fullName>
        <label>Innov Value Share</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Innov_Volume_Share__c</fullName>
        <label>Innov Volume Share</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Media_Spend_dedicated__c</fullName>
        <label>Media Spend (dedicated)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Penetration_cum__c</fullName>
        <label>Penetration (cum)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Period__c</fullName>
        <label>Period</label>
        <picklist>
            <picklistValues>
                <fullName>Period 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Period 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Period 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Period 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Period 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Period 6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Period 7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Period 8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Period 9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Period 10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Period 11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Period 12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Period 13</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Relative_Price_to_Mktg_API__c</fullName>
        <label>Relative Price to Mktg (API)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Repeat_Rate__c</fullName>
        <label>Repeat Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Wtd_Distribution__c</fullName>
        <label>Wtd Distribution</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>IPM GDSection6.3</label>
    <nameField>
        <label>IPM GDSection6.5 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>IPM GDSection6.3</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>